worked on adding editor for create-cms-page.html, worked on css fine tune responsive breakups

--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -60,7 +60,7 @@ body {
   margin: 0px !important;
 }
 .width-80 {
-  width: 80% !important;
+  width: 80%;
 }
 .no-border {
   border: 0px !important;
