--- a/src/styles/global/pages-backup/_home.scss
+++ b/src/styles/global/pages-backup/_home.scss
@@ -89,6 +89,9 @@
   width: 50%;
   float: left;
 }
+.middle-section.width-80 {
+  width: 80%;
+}
 .left_menu_second {
   background-color: $white_color;
   z-index: 9;
