worked on responsive css for cms-management page

--- a/src/styles/global/pages-backup/_home.scss
+++ b/src/styles/global/pages-backup/_home.scss
@@ -88,9 +88,15 @@
 .middle-section {
   width: 50%;
   float: left;
-}
-.middle-section.width-80 {
-  width: 80%;
+  &.width-80 {
+    width: 80%;
+  }
+  &.res767 {
+    @media (max-width: 767px) {
+      padding: 0px;
+      width: calc(100% - 30px);
+    }
+  }
 }
 .left_menu_second {
   background-color: $white_color;
