--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -25,6 +25,9 @@ body {
 .no-padding {
   padding: 0px !important;
 }
+.no-padding-left {
+  padding-left: 0px;
+}
 .no-padding-right {
   padding-right: 0px;
 }
@@ -46,6 +49,9 @@ body {
 }
 .padding-left-10 {
   padding-left: 10px;
+}
+.padding-right-10 {
+  padding-right: 10px;
 }
 .margin-bottom-50 {
   margin-bottom: 50px;
