worked on css changes

--- a/html-design/html/css/pages/_login.scss
+++ b/html-design/html/css/pages/_login.scss
@@ -174,7 +174,9 @@
 	footer{
 		float: left;
 		width: 100%;
-		margin: 30px 0px;
+		margin: 28px 0px;
+		position: absolute;
+		bottom: 0;
 		ul{
 			padding: 0px;
 			text-align: center;
