--- a/src/styles/global/pages/_login.scss
+++ b/src/styles/global/pages/_login.scss
@@ -185,7 +185,9 @@
   footer {
     float: left;
     width: 100%;
-    margin: 30px 0px;
+    margin: 28px 0px;
+    position: absolute;
+    bottom: 0px;
     ul {
       padding: 0px;
       text-align: center;
