--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -56,6 +56,12 @@ body {
 .margin-bottom-50 {
   margin-bottom: 50px;
 }
+.margin-bottom-13 {
+  margin-bottom: 13px;
+}
+.margin-bottom-30 {
+  margin-bottom: 30px;
+}
 .margin-top-25 {
   margin-top: 25px;
 }
