--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -45,16 +45,19 @@
   .slot_one {
     button {
       width: 90%;
+      margin-top: 10px;
     }
   }
   .slot_two {
     button {
       width: 90%;
+      margin-top: 10px;
     }
   }
   .slot_three {
     button {
       width: 100%;
+      margin-top: 10px;
     }
   }
 }
@@ -302,9 +305,10 @@
     background-color: $white_color;
     .normal_title {
       display: inline-block;
+      margin-right: 15px;
     }
     a {
-      padding-right: 10px;
+      padding-right: 7px;
       color: $blue_color;
     }
   }
