--- a/src/styles/global/pages/_login.scss
+++ b/src/styles/global/pages/_login.scss
@@ -45,13 +45,13 @@
       width: 20px;
     }
     h3 {
-      margin-bottom: 20px;
+      margin-bottom: 10px;
       float: left;
       width: 100%;
     }
     p {
       font-size: 20px;
-      margin-bottom: 25px;
+      margin-bottom: 30px;
       float: left;
       width: 100%;
     }
@@ -136,6 +136,9 @@
         display: block;
         width: 100%;
         padding: 9px;
+      }
+      .blue_button {
+        font-weight: bold;
       }
     }
     .terms-conditions {
