--- a/src/styles/global/pages/_messages.scss
+++ b/src/styles/global/pages/_messages.scss
@@ -174,6 +174,7 @@
           float: left;
           border-left: 2px solid #333;
           height: 406px;
+          width: 100%;
           .date {
             font-size: 12px;
             text-align: center;
@@ -182,30 +183,38 @@
             width: 100%;
           }
           .reply {
-            width: 50%;
+            width: auto;
+            max-width: 50%;
             float: right;
             background: #0f7aba;
             color: #fff;
             border-radius: 13px;
             clear: both;
-            padding: 15px;
+            padding: 17px 15px;
             margin-bottom: 12px;
             margin-right: 12px;
             .time {
               float: right;
+              position: relative;
+              top: 14px;
+              left: 6px;
             }
           }
           .response {
-            width: 60%;
+            width: auto;
+            max-width: 60%;
             float: left;
             background: rgba(190, 190, 190, 0.35);
             border-radius: 13px;
             clear: both;
-            padding: 15px;
+            padding: 17px 15px;
             margin-bottom: 12px;
             margin-left: 12px;
             .time {
               float: right;
+              position: relative;
+              top: 14px;
+              left: 6px;
             }
           }
         }
