--- a/src/styles/global/pages/_login.scss
+++ b/src/styles/global/pages/_login.scss
@@ -197,6 +197,8 @@
     left: 0px;
     background-color: white;
     z-index: 100 !important;
+    margin: 0px;
+
     ul {
       padding: 0px;
       text-align: center;
