--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -23,9 +23,15 @@ body {
   font-family: "Helvetica";
   @media (max-width: 767px) {
     section.res767 {
-      background: url("../images/notifications-logo.jpg");
+      background: url("../images/notifications-logo.jpg") no-repeat center;
+      width: 100%;
+      background-size: contain;
+      min-height: 100vh;
     }
     // display: none;
+  }
+  &.backwhite {
+    background-color: white;
   }
 }
 .no-padding {
@@ -40,6 +46,9 @@ body {
 .padding-lr-5 {
   padding-left: 5px;
   padding-right: 5px;
+}
+.padding-rl-23 {
+  padding: 0 23px;
 }
 .padding-10 {
   padding: 10px;
@@ -446,4 +455,36 @@ hr {
       }
     }
   }
+}
+
+.scrollStyle::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+  border-radius: 10px;
+}
+
+.scrollStyle::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+  background-color: #f5f5f5;
+}
+
+.scrollStyle::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0.44, rgba(2, 155, 215, 1)),
+    color-stop(0.86, rgba(31, 88, 166, 1))
+  );
+  background-image: -moz-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0.44, rgba(2, 155, 215, 1)),
+    color-stop(0.86, rgba(31, 88, 166, 1))
+  );
 }
