--- a/src/styles/global/cms/_cms.scss
+++ b/src/styles/global/cms/_cms.scss
@@ -36,7 +36,7 @@ header {
       font-size: 16px;
       font-family: "Helvetica-Bold";
       margin-top: 20px;
-      margin-bottom: 30px;
+      // margin-bottom: 30px;
     }
     .policy-points {
       padding-left: 15px;
@@ -144,6 +144,14 @@ header {
       height: 40px;
       width: auto;
       padding-top: 10px;
+      &.wid120 {
+        min-width: 120px;
+      }
+      &.grayBtn {
+        border: 0px;
+        background-color: rgba(190, 190, 190, 0.35);
+        min-width: 150px;
+      }
     }
   }
   input {
