message css changes

--- a/src/styles/global/pages/_messages.scss
+++ b/src/styles/global/pages/_messages.scss
@@ -66,9 +66,9 @@
             }
           }
           float: left;
-          height: 346px;
+          height: 408px;
           overflow: auto;
-          border-bottom: 2px solid #333;
+          // border-bottom: 2px solid #333;
           .chat-wrapper {
             float: left;
             width: 100%;
