--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -456,7 +456,14 @@ hr {
     }
   }
 }
-
+.messages-modal {
+  .modal-dialog {
+    .modal-body {
+      float: left;
+      padding: 0;
+    }
+  }
+}
 .scrollStyle::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
