worked on html and css changes for forms

--- a/html-design/html/css/pages/_login.scss
+++ b/html-design/html/css/pages/_login.scss
@@ -77,6 +77,9 @@
 					    bottom:0;
 					    margin: 0px;
 					}
+					span.error-msg{
+						float: left;
+					}
 					input[type="radio"]{
 						opacity:0.011;
     					z-index:100;    					    
