--- a/src/styles/global/pages/_editprofile.scss
+++ b/src/styles/global/pages/_editprofile.scss
@@ -39,8 +39,8 @@
         border-radius: 50%;
         margin: 0 auto;
         margin-bottom: 8px;
-        background: url("../images/pic-1.jpg") no-repeat center 100%;
-        background-size: contain;
+        // background: url("../images/pic-1.jpg") no-repeat center 100%;
+        // background-size: contain;
       }
       a {
         font-size: 12px;
