fix design issue and implemented state for form data

--- a/src/styles/global/pages/_backoffice.scss
+++ b/src/styles/global/pages/_backoffice.scss
@@ -253,7 +253,7 @@
     color: #4a4a4a;
     flex: 1;
   }
-  a {
+  button {
     // width: calc(100% / 3);
     background-image: radial-gradient(circle at 0 100%, #1f58a6, #029bd7);
     color: #ffffff;
