--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -586,3 +586,44 @@ section.loader-wrapr {
     transform: scale(2);
   }
 }
+
+//login popup
+#note {
+  position: absolute;
+  z-index: 101;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: radial-gradient(circle at 0 100%, #1f58a6, #029bd7);
+  text-align: center;
+  line-height: 2.5;
+  overflow: hidden;
+  color: white;
+  -webkit-box-shadow: 0 0 5px black;
+  -moz-box-shadow: 0 0 5px black;
+  box-shadow: 0 0 5px black;
+  -webkit-transform: translateY(-50px);
+  -webkit-animation: slideDown 2.5s 1s 1 ease forwards;
+  -moz-transform: translateY(-50px);
+  -moz-animation: slideDown 2.5s 1s 1 ease forwards;
+  #close {
+    display: none;
+  }
+}
+.slideDownStyle {
+}
+@keyframes slideDown {
+  0%,
+  100% {
+    -webkit-transform: translateY(-50px);
+  }
+  10%,
+  90% {
+    -webkit-transform: translateY(0px);
+  }
+}
+@-webkit-keyframes slideDown {
+  // @include keyframe(slideDown)
+}
+@-moz-keyframes slideDown {
+}
