--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -505,13 +505,15 @@ hr {
 
 //loader css
 section.loader-wrapr {
-  position: absolute;
+  position: fixed;
   z-index: 2;
   background: rgba(0, 0, 0, 0.1);
   height: 100vh;
   width: 100%;
   text-align: center;
   top: 0px;
+  left: 0px;
+  width: 100%;
 }
 .loader {
   position: static;
@@ -588,7 +590,7 @@ section.loader-wrapr {
 }
 
 //login popup
-#note {
+.login_pop_up#note {
   position: absolute;
   z-index: 101;
   top: 0;
@@ -610,8 +612,6 @@ section.loader-wrapr {
     display: none;
   }
 }
-.slideDownStyle {
-}
 @keyframes slideDown {
   0%,
   100% {
@@ -623,7 +623,22 @@ section.loader-wrapr {
   }
 }
 @-webkit-keyframes slideDown {
-  // @include keyframe(slideDown)
+  0%,
+  100% {
+    -webkit-transform: translateY(-50px);
+  }
+  10%,
+  90% {
+    -webkit-transform: translateY(0px);
+  }
 }
 @-moz-keyframes slideDown {
+  0%,
+  100% {
+    -webkit-transform: translateY(-50px);
+  }
+  10%,
+  90% {
+    -webkit-transform: translateY(0px);
+  }
 }
