--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -196,6 +196,9 @@
           color: #ffffff;
           border: 0;
         }
+        &.wid49 {
+          width: 48.5%;
+        }
       }
     }
     .dates {
