--- a/src/styles/global/pages/_backoffice.scss
+++ b/src/styles/global/pages/_backoffice.scss
@@ -945,17 +945,17 @@
       display: flex;
     }
     .trash-icon {
-      background: red;
+      background: #dd1d1d;
       padding: 10px 15px;
       color: #fff;
     }
     .connect-text-red {
-      background: #e24a4a;
+      background: #dd1d1d;
       padding: 10px 15px;
       color: #fff;
     }
     .connect-text-green {
-      background: #4cb74c;
+      background: #167f52;
       padding: 10px 15px;
       color: #fff;
     }
