worked on message count css

--- a/src/styles/global/layout/_header.scss
+++ b/src/styles/global/layout/_header.scss
@@ -156,6 +156,8 @@ header {
             font-size: 12px;
             line-height: 14px;
             color: $white_color !important;
+            &.badge.badge-danger {
+            }
           }
         }
         .notification-mega-wrapper {
