--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -695,7 +695,7 @@ section.loader-wrapr {
   background-color: #dd1d1d;
   position: absolute;
   top: 0;
-  right: 0;
+  right: 7px;
   padding: 6px 2px 1px 2px;
   min-height: 21px;
   min-width: 21px;
