--- a/src/styles/global/layout/_header.scss
+++ b/src/styles/global/layout/_header.scss
@@ -157,6 +157,7 @@ header {
             line-height: 14px;
             color: $white_color !important;
             &.badge.badge-danger {
+              padding-top: 5px;
             }
           }
         }
