--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -77,6 +77,9 @@ body {
 .margin-bottom-30 {
   margin-bottom: 30px;
 }
+.margin-bottom-15 {
+  margin-bottom: 15px;
+}
 .margin-bottom-10 {
   margin-bottom: 10px;
 }
@@ -695,9 +698,10 @@ section.loader-wrapr {
   background-color: #dd1d1d;
   position: absolute;
   top: 0;
-  right: 7px;
+  right: 15px;
   padding: 6px 2px 1px 2px;
   min-height: 21px;
   min-width: 21px;
   text-align: center;
+  font-size: 10px !important;
 }
