edit profile and message count

--- a/src/styles/global/pages/_backoffice.scss
+++ b/src/styles/global/pages/_backoffice.scss
@@ -979,6 +979,10 @@
       border: 0;
       color: white;
       padding-top: 5px;
+      display: block;
+      &.dispNone {
+        display: none;
+      }
     }
     .hidden-text {
       position: absolute;
