changes to page-not-found

--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -509,7 +509,7 @@ hr {
 //loader css
 section.loader-wrapr {
   position: fixed;
-  z-index: 2;
+  z-index: 1000;
   background: rgba(0, 0, 0, 0.5);
   height: 100vh;
   width: 100%;
@@ -665,6 +665,8 @@ section.loader-wrapr {
       background-color: #0f7bc0;
       height: 320px;
       width: 320px;
+      height: 15vh;
+      width: 15vw;
       margin: 0 auto;
       background-size: 100% 100%;
       margin-top: 100px;
@@ -674,8 +676,9 @@ section.loader-wrapr {
     float: left;
     width: 100%;
     margin: 28px 0px;
-    position: absolute;
+    position: fixed;
     bottom: 0;
+    background-color: white;
     .page-not-found {
       ul {
         padding: 0px;
