worked on create cms page

--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -663,13 +663,13 @@ section.loader-wrapr {
     .logo-background {
       background: url("../images/logo-pic.png") no-repeat center;
       background-color: #0f7bc0;
-      height: 320px;
-      width: 320px;
-      height: 15vh;
-      width: 15vw;
+      height: 275px;
+      width: 275px;
+      // height: 15vh;
+      // width: 15vw;
       margin: 0 auto;
       background-size: 100% 100%;
-      margin-top: 100px;
+      margin-top: 75px;
     }
   }
   footer {
