--- a/src/styles/global/pages/_backoffice.scss
+++ b/src/styles/global/pages/_backoffice.scss
@@ -338,9 +338,6 @@
           left: 8px;
           top: 11px;
         }
-        span {
-          // margin-right: 10px;
-        }
         .green-circle {
           display: inline-block;
           float: left;
@@ -498,8 +495,7 @@
       @media (max-width: 480px) {
         margin-bottom: 0px;
       }
-      margin-bottom: 20px;
-      // create-cms-page plugin
+      margin-bottom: 20px; // create-cms-page plugin
       .rdw-editor-wrapper {
         .rdw-editor-toolbar.toolbar-class {
           padding: 6px 0px 0;
@@ -599,6 +595,9 @@
           .DraftEditor-root {
             height: 419px;
           }
+          .notranslate.public-DraftEditor-content {
+            padding: 0 14px 14px 14px;
+          }
         }
         @media (max-width: 991px) {
           .rdw-editor-toolbar.toolbar-class {
@@ -620,8 +619,6 @@
             }
             .rdw-colorpicker-wrapper {
               padding-right: 10px;
-            }
-            .rdw-history-wrapper {
             }
           }
         }
@@ -672,10 +669,6 @@
           color: #4a4a4a;
           font-weight: bold;
           margin-bottom: 13px;
-        }
-        input {
-        }
-        select {
         }
         .choice-wrapr {
           .choice {
@@ -744,9 +737,6 @@
         border: solid 1px #979797;
         margin-right: 10px;
         min-width: 120px;
-        &:last-child {
-          // margin-right: 0px;
-        }
         @media (max-width: 440px) {
           width: calc(100% / 3.5);
           padding: 10px;
@@ -830,8 +820,6 @@
               font-size: 20px;
               flex: 1;
               color: black;
-            }
-            .bold {
             }
             .italic {
               background: url("../images/italic.PNG") no-repeat center;
