--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -650,7 +650,7 @@ section.loader-wrapr {
   section.page-not-found {
     text-align: center;
     background-color: white;
-    min-height: 100vh;
+    min-height: calc(100vh - 72px);
 
     // font-family: 'Helvetica-Bold';
     .heading {
