worked on model changes, create campaign, editor, date picker

--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -700,7 +700,7 @@ section.loader-wrapr {
 .badge.badge-danger {
   background-color: #dd1d1d;
   position: absolute;
-  top: 0;
+  top: 2px;
   right: 15px;
   padding: 6px 2px 1px 2px;
   min-height: 21px;
