--- a/src/styles/global/pages/_create-ad.scss
+++ b/src/styles/global/pages/_create-ad.scss
@@ -121,6 +121,7 @@
       text-align: right;
       padding-bottom: 15px;
       background: $white_color;
+      height: 100%;
       img {
         width: 30px;
         margin-right: 15px;
