--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -65,6 +65,10 @@ body {
 .padding-left-10 {
   padding-left: 10px;
 }
+.padding-lr-30 {
+  padding-left: 30px;
+  padding-right: 30px;
+}
 .padding-right-10 {
   padding-right: 10px;
 }
@@ -89,6 +93,9 @@ body {
 .margin-top-25 {
   margin-top: 25px;
 }
+.margin-top-46 {
+  margin-top: 46px;
+}
 .size-20 {
   font-size: 20px;
 }
@@ -109,6 +116,9 @@ hr {
 }
 .margin-b-25 {
   margin-bottom: 25px;
+}
+.textCenter {
+  text-align: center;
 }
 /******** Titles Style*******************/
 .normal_title {
