--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -41,8 +41,11 @@
     }
     .box {
       background-color: #e9e9e9;
-      padding: 12.25rem 1.25rem;
+      padding: 15.25rem 1.25rem;
       text-align: center;
+      height: 378px;
+      width: 378px;
+      margin: 0 auto;
       .inputfile {
         width: 0.1px;
         height: 0.1px;
@@ -480,6 +483,38 @@
         @include gradient();
         color: #fff;
       }
+    }
+  }
+  .edit-profile-pic {
+    min-width: 43%;
+    min-height: 378px;
+    width: 378px;
+    height: 378px;
+    margin: 0px auto;
+    margin-top: 46px;
+    input[type="range"] {
+      min-width: 40%;
+      width: 352px;
+      margin: 0 auto;
+    }
+  }
+  .editor-canvas {
+    min-width: 43%;
+    min-height: 378px;
+    width: 378px !important;
+    height: 378px !important;
+    margin: 0px auto;
+  }
+  .upload-profile-wrapr {
+    & > div {
+      width: 100% !important;
+      min-height: 63% !important;
+      text-align: center;
+      margin-top: 46px;
+    }
+    input[type="range"] {
+      width: 352px;
+      margin: 0 auto;
     }
   }
 }
