--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -257,16 +257,64 @@
                 top: 5px;
                 left: 0;
                 height: 10px;
-                border-right-color: #fff;
+                border-right-color: transparent;
                 width: 10px;
+                &:before {
+                  content: "";
+                  position: fixed;
+                  border: 10px solid transparent;
+                  border-right: 10px solid white;
+                  width: 10px;
+                  height: 10px;
+                  background: transparent;
+                  left: 0;
+                  z-index: 1000 !important;
+                  top: 6px;
+                }
+                &:after {
+                  content: "";
+                  position: fixed;
+                  border: 5px solid transparent;
+                  border-right: 5px solid #1967b1;
+                  width: 10px;
+                  height: 10px;
+                  background: transparent;
+                  left: 10px;
+                  z-index: 1000 !important;
+                  top: 11px;
+                }
               }
               button.react-datepicker__navigation.react-datepicker__navigation--next {
                 position: absolute;
                 top: 5px;
                 right: 0;
                 height: 10px;
-                border-left-color: #fff;
+                border-left-color: transparent;
                 width: 10px;
+                &:before {
+                  content: "";
+                  position: fixed;
+                  border: 10px solid transparent;
+                  border-left: 10px solid white;
+                  width: 10px;
+                  height: 10px;
+                  background: transparent;
+                  right: 0;
+                  z-index: 1000 !important;
+                  top: 6px;
+                }
+                &:after {
+                  content: "";
+                  position: fixed;
+                  border: 5px solid transparent;
+                  border-left: 5px solid #088ece;
+                  width: 10px;
+                  height: 10px;
+                  background: transparent;
+                  right: 10px;
+                  z-index: 1000 !important;
+                  top: 11px;
+                }
               }
               .react-datepicker__header {
                 padding-top: 0px;
@@ -381,6 +429,7 @@
             border: 1px solid #333333;
             border-top: 0px;
             height: 318px;
+            padding: 0 10px;
             .DraftEditor-root {
               height: 95%;
             }
