--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -72,6 +72,9 @@ body {
 .padding-right-10 {
   padding-right: 10px;
 }
+.padding-b-25 {
+  padding-bottom: 25px;
+}
 .margin-bottom-50 {
   margin-bottom: 50px;
 }
