--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -479,6 +479,35 @@
       }
     }
   }
+  .__react_component_tooltip.type-light.border {
+    border: 1px solid #777;
+    background: rgba(190, 190, 190, 0.5);
+    -webkit-overflow-scrolling: touch;
+    outline: 0;
+    text-align: center;
+    margin-left: -6px;
+    margin-top: 0px;
+    padding: 0px;
+    .post-action-links {
+      background-color: transparent;
+      position: relative;
+      display: inline-block;
+      top: 40%;
+      width: 300px;
+      div {
+        display: block;
+        background: #ffffff;
+        color: #4a4a4a;
+        padding: 10px 40px;
+        text-align: center;
+        margin-bottom: 2px;
+        font-size: 12px;
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
   /*************** Comments CSS ****************/
   .feed-comment {
     .comment-wrapper {
