--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -489,7 +489,7 @@
       &:first-child {
         border-top: 1px solid rgba(0, 0, 0, 0.8);
       }
-      textarea {
+      input {
         height: 38px;
         border: 0;
         resize: none;
@@ -551,4 +551,8 @@
   position: relative;
   top: -3px;
   padding: 0px 5px;
+}
+
+.__react_component_tooltip {
+  pointer-events: auto !important;
 }
