--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -609,6 +609,7 @@
           background-image: radial-gradient(circle at 0 100%, #1f58a6, #029bd7);
           position: relative;
           top: -9px;
+          left: 20px;
         }
         &::-moz-range-thumb {
           // box-shadow: -100vw 0 0 100vw dodgerblue;
@@ -649,6 +650,16 @@
       }
       img.max-profile-pic {
         left: 10px;
+      }
+      .runnable {
+        position: relative;
+        background-image: radial-gradient(circle at 0 100%, #1f58a6, #029bd7);
+        width: 279px;
+        width: 20px;
+        height: 2px;
+        left: 19px;
+        top: 31px;
+        z-index: 2;
       }
     }
   }
