#tag and comments

--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -581,6 +581,7 @@
         height: 20px;
         cursor: pointer;
         border-radius: 0;
+        padding: 0 22px 0 0;
         /* iOS */
         &:focus {
           outline: none;
