--- a/html-design/html/css/pages/_home.scss
+++ b/html-design/html/css/pages/_home.scss
@@ -355,9 +355,14 @@
 			float: left;
 	    	width: 100%;
 	    	padding: 10px;
+			.comment-content{
+				p{
+					color: blue;
+				}
+			}
 	    	&:first-child{
 	    		border-top: 1px solid #ededed;
-	    	}
+			}
 	    	textarea{
 	    		height: 38px;
 			    border: 0;
