--- a/src/styles/global/pages-backup/_home.scss
+++ b/src/styles/global/pages-backup/_home.scss
@@ -400,6 +400,11 @@
       &:first-child {
         border-top: 1px solid #ededed;
       }
+      .comment-content {
+        p {
+          color: blue;
+        }
+      }
       textarea {
         height: 38px;
         border: 0;
