--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -488,6 +488,52 @@
     margin-left: -6px;
     margin-top: 0px;
     padding: 0px;
+    width: 340px;
+    opacity: 1;
+    &::before,
+    &::after {
+      display: none;
+    }
+    & > div {
+      width: 100%;
+      text-align: left;
+      background: #9b9b9b;
+      & > div {
+        padding: 11px 0 10px 15px;
+        background-color: white;
+        margin-bottom: 1px;
+        font-size: 14px;
+        & > div:first-child {
+          color: #4a4a4a;
+          &.img-wrapr {
+            width: 45px;
+            height: 45px;
+            float: left;
+            margin-right: 10px;
+            img {
+              height: inherit !important;
+              width: inherit !important;
+              border-radius: 50%;
+            }
+          }
+        }
+        & > div:last-child {
+          color: #9b9b9b;
+          &.person-info-wrapr {
+            width: calc(100% - 50px);
+            .person-name {
+              font-family: "Helvetica-Bold";
+              color: #4a4a4a;
+            }
+          }
+        }
+      }
+      &.tag-person-wrapr {
+        .img-wrapr {
+          float: left;
+        }
+      }
+    }
     .post-action-links {
       background-color: transparent;
       position: relative;
